--- a/config/product-layout.yaml
+++ b/config/product-layout.yaml
@@ -63,7 +63,7 @@ featuredFeatures:
       - relatedAPI: 
         title: profile
         description: Create or update a stored customer profile.
-        link: "https://developer.fiserv.com/product/CardPointe/api/?type=post&path=/cardconnect/rest/profile/&branch=main&version=1.0.0"
+        path: /api/?type=post&path=/cardconnect/rest/profile/&branch=main&version=1.0.0
   - title: Semi-Integrated Terminals
     groupName: Card-Present
     description: Use the CardPointe Integrated Terminal API to integrate P2PE-validated, card-present payments to your point-of-sale (POS) application.
