--- a/config/product-layout.yaml
+++ b/config/product-layout.yaml
@@ -63,7 +63,7 @@ featuredFeatures:
       - relatedAPI: 
         title: profile
         description: Create or update a stored customer profile.
-        path: /product/CardPointe/api/?type=post&path=/cardconnect/rest/profile&version=1.0.0
+        link: /product/CardPointe/api/?type=post&path=/cardconnect/rest/profile&version=1.0.0
   - title: Semi-Integrated Terminals
     groupName: Card-Present
     description: Use the CardPointe Integrated Terminal API to integrate P2PE-validated, card-present payments to your point-of-sale (POS) application.
